--- a/index.html
+++ b/index.html
@@ -1,64 +1,343 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>SRPI by RocketEvolution</title>
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>SRPI</title>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>SRPI</h1>
-        <p></p>
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.css" />
+	<link rel="stylesheet" type="text/css" href="css/custom.css" />
+	<script type="text/javascript" src="js/modernizr.custom.js"></script>
 
-        <p class="view"><a href="https://github.com/RocketEvolution/srpi">View the Project on GitHub <small>RocketEvolution/srpi</small></a></p>
+</head>
+<body>
 
 
-        <ul>
-          <li><a href="https://github.com/RocketEvolution/srpi/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/RocketEvolution/srpi/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/RocketEvolution/srpi">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+	<!-- begin [RESPONSIVE MENU] -->
+	<div id="responsivemenu" class="responsivemenu visible-xs">
+		<ul>
+			<li class="active"><a href="#">Home</a></li>
+			<li><a href="#">Products</a></li>
+			<li><a href="#">Services</a></li>
+			<li><a href="#">About Us</a></li>
+			<li><a href="#">Contact</a></li>
+		</ul>
+	</div>
+	<!-- end [RESPONSIVE MENU] -->
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+	<!-- begin [HEADER] -->
+	<div class="header">
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+		<!-- begin [TOPHEADER] -->
+		<div class="topheader">
+			<div class="container">
+			<div class="row">
+				<div class="visible-xs">
+					<ul class="contactxs text-left">
+						<li><span class="fa fa-phone"></span> <small>(02) 921-3516</small></li>
+						<li><span class="fa fa-envelope"></span> <small><a href="#">info@system-rental.com.ph</a></small></li>
+					</ul>
+				</div>
+				<div class="col-lg-8 col-md-8 col-sm-8 hidden-xs">
+					<ul class="contact text-left">
+						<li><span class="fa fa-phone"></span> <small>(02) 921-3516</small></li>
+						<li><span class="fa fa-envelope"></span> <small><a href="#">info@system-rental.com.ph</a></small></li>
+					</ul>
+				</div>
+				<div class="col-lg-4 col-md-4 col-sm-4 hidden-xs">
+				<ul class="socialmedia text-right">
+					<li><a href="#" class="fa fa-facebook"></a></li>
+					<li><a href="#" class="fa fa-twitter"></a></li>
+					<li><a href="#" class="fa fa-youtube"></a></li>
+					<li><a href="#" class="fa fa-pinterest"></a></li>
+				</ul>
+				</div>
+			</div>
+			</div>
+		</div>
+		<!-- end [TOPHEADER] -->
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+		<!-- begin [MAINHEADER] -->
+		<div class="mainheader">
+			<div class="container">
+			<div class="row">
 
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+				<!-- begin [LOGO] -->
+				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 removespace logo-container">
+					<span class="logo hidden-xs"><a href="#"><img src="images/logo.png" class="img-responsive" /></a></span>
+					<span class="logoxs visible-xs"><a href="#"><img src="images/logo.png" class="img-responsive" /></a></span>
+					<div class="logo-socialmedia">
+						<ul>
+							<li><a href="#" class="fa fa-facebook"></a></li>
+							<li><a href="#" class="fa fa-twitter"></a></li>
+							<li><a href="#" class="fa fa-youtube"></a></li>
+							<li><a href="#" class="fa fa-pinterest"></a></li>
+						</ul>
+					</div>
+				</div>
+				<!-- end [LOGO] -->
+				<!-- begin [NAVIGATION] -->
+				<div class="navigation col-lg-8 col-md-8 col-sm-8 hidden-xs removespace">
+					<ul>
+						<li class="active"><a href="#">Home</a></li><li>
+						<a href="#">Products</a></li><li>
+						<a href="#">Services</a></li><li>
+						<a href="#">About Us</a></li><li>
+						<a href="#">Contact</a></li>
+					</ul>
+				</div>
+				<!-- end [NAVIGATION] -->
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+				<!-- begin [RESPONSIVE-BUTTON] -->
+				</div>
+				<button type="button" id="responsivemenubutton" class="responsivemenubutton visible-xs">
+					<span class="fa fa-chevron-left"></span>
+				</button>
+				<!-- end [RESPONSIVE-BUTTON] -->
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/RocketEvolution">RocketEvolution</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
+
+			</div>
+			</div>
+		</div>
+		<!-- end [MAINHEADER] -->
+
+	</div>
+	<!-- end [HEADER] -->
+
+
+	<!-- begin [CONTENT] -->
+	<div class="content">
+
+		<!-- begin [SLIDE] -->
+		<br class="visible-xs">
+		<br class="visible-xs">
+		<br class="visible-xs">
+		<div class="slideshowcontainer">
+			<div id="slideshow">
+				<img src="images/slide1.jpg" class="img-responsive" />
+				<img src="images/slide2.jpg" class="img-responsive" />
+			</div>
+			<div class="inv"><img src="images/inv.gif" /></div>
+			<div class="row slideshownav">
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right slideprev">
+					<a id="slideprev" href="#"><span class="fa fa-arrow-left"></span> Prev</a>
+				</div>
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-left slidenext">
+					<a id="slidenext" href="#">Next <span class="fa fa-arrow-right"></span></a>
+				</div>
+			</div>
+		</div>
+		<!-- end [SLIDE] -->
+
+
+		<!-- begin [CONTENT 1] -->
+		<div class="container content-section">
+			<div class="innercontainer">
+				<h1 class="text-center lineheight-lg">
+				At <b classs="text-red">SRPI</b>, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+				<br /><a href="#" class="contentbutton small">Learn more about us</a>
+				</h1>
+			</div>
+		</div>
+		<!-- end [CONTENT 1] -->
+
+
+		<!-- begin [CONTENT 2] -->
+		<div class="container content-section">
+			<div class="innercontainer">
+				<div class="menu col-lg-4 col-md-4 col-sm-4 col-xs-12 text-center">
+					<div class="menu-item"><a href="#" class="menu fa fa-video-camera fa-2x round-circle"></a></div>
+					<h2 class="menu-title">Rental Cameras</h2>
+					<div class="menu-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</div>
+					<div><a href="#" class="btn btn-warning">view products</a></div>
+					<br class="visible-xs" />
+					<br class="visible-xs" />
+				</div>
+				<div class="menu col-lg-4 col-md-4 col-sm-4 col-xs-12 text-center">
+					<div class="menu-item"><a href="#" class="menu fa fa-question fa-2x round-circle"></a></div>
+					<h2 class="menu-title">Got Questions?</h2>
+					<div class="menu-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</div>
+					<div><a href="#" class="btn btn-warning">inquire now</a></div>
+					<br class="visible-xs" />
+					<br class="visible-xs" />
+				</div>
+				<div class="menu col-lg-4 col-md-4 col-sm-4 col-xs-12 text-center">
+					<div class="menu-item"><a href="#" class="menu fa fa-comments fa-2x round-circle"></a></div>
+					<h2 class="menu-title">Our Services</h2>
+					<div class="menu-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</div>
+					<div><a href="#" class="btn btn-warning">learn more</a></div>
+				</div>
+			</div>
+		</div>
+		<!-- end [CONTENT 2] -->
+
+
+
+		<!-- begin [CONTENT 3] -->
+		<div class="content-section">
+			<div class="row">
+				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 itemprev removespace">
+					<div class="overlay">
+						<h4>Lorem Ipsum</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+						<p><a href="#" class="btn btn-warning btn-sm">view all products</a></p>
+					</div>
+					<img src="images/prod4.jpg" class="img-responsive" />
+				</div>
+				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 itemprev removespace">
+					<div class="overlay">
+						<h4>Lorem Ipsum</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+						<p><a href="#" class="btn btn-warning btn-sm">view all products</a></p>
+					</div>
+					<img src="images/prod2.jpg" class="img-responsive" />
+				</div>
+				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 itemprev removespace">
+					<div class="overlay">
+						<h4>Lorem Ipsum</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+						<p><a href="#" class="btn btn-warning btn-sm">view all products</a></p>
+					</div>
+					<img src="images/prod3.jpg" class="img-responsive" />
+				</div>
+				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 itemprev removespace">
+					<div class="overlay">
+						<h4>Lorem Ipsum</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+						<p><a href="#" class="btn btn-warning btn-sm">view all products</a></p>
+					</div>
+					<img src="images/prod5.jpg" class="img-responsive" />
+				</div>
+			</div>
+		</div>
+		<!-- end [CONTENT 3] -->
+
+
+
+		<!-- begin [CONTENT 4] -->
+		<div class="container content-section">
+			<div class="innercontainer">
+				<h1 class="text-center lineheight-lg"> SRPI demonstrates top quality standards through our customer service and demonstrates the willingness and capability to uphold these standards.
+				<br /><a href="#" class="contentbutton small">Learn more about us</a>
+				</h1>
+			</div>
+		</div>
+		<!-- end [CONTENT 4] -->
+
+
+	</div>
+	<!-- end [CONTENT] -->
+
+
+	<div class="footer-contact">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 contact-form">
+				<form action="#" method="post">
+					<div class="input-field">
+						<input type="text" name="name" class="form-control" required="required" placeholder="Your Name...">
+					</div>
+					<div class="input-field">
+						<input type="email" name="email" class="form-control" required="required" placeholder="Your Email...">
+					</div>
+					<div class="input-field">
+						<input type="text" name="subject" class="form-control" required="required" placeholder="Subject...">
+					</div>
+					<div class="input-field">
+						<textarea name="message" class="form-control" required="required" placeholder="Messages..."></textarea>
+					</div>
+			       	<button type="submit" id="submit" class="btn btn-danger btn-lg"><span class="fa fa-paper-plane"></span> Send</button>
+			       	<br class="visible-sm visible-xs" />
+			       	<br class="visible-sm visible-xs" />
+			       	<br class="visible-sm visible-xs" />
+				</form>
+			</div>
+			<div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 wow fadeInRight">
+				<address class="contact-details">
+					<h4>Contact Information</h4>		
+					<hr />				
+					<p><i class="fa fa-pencil"></i>#89 GF/B FSS Building<span>Scout Castor Street</span> <span>Brgy. Laging Handa, Q.C.</span><span>Philippines</span></p><br>
+					<p><i class="fa fa-phone"></i>(02) 921-3516</p>
+					<p><i class="fa fa-envelope"></i><a href="mailto:info@system-rental.com.ph?Subject=Message%20to%20GCDC" target="_top" class="text-underline">info@system-rental.com.ph</a></p>
+				</address>
+			</div>
+		</div>
+	</div>
+	</div>
+
+
+	<!-- begin [FOOTER] -->
+	<div class="footer">
+		<div class="container">
+			<div class="row">
+
+				<div class="footer-item footerborder-right col-lg-2 col-md-2 col-sm-8 col-xs-6 text-center">
+					<a href="#"><img src="images/logo.png" class="img-responsive" /></a>
+					<br /><br />
+					<p>Copyright © 2016 <a href="#">System Rental Philippines Inc.</a></p>
+				</div>
+				<div class="footer-item footerborder-right col-lg-2 col-md-2 col-sm-4 col-xs-6">
+					<h2>Web <b>Control</b></h2>
+					<br />
+					<ul>
+						<li><a href="#">Home</a></li>
+						<li class="active"><a href="#">About Us</a></li>
+						<li><a href="#">Products</a></li>
+						<li><a href="#">Services</a></li>
+						<li><a href="#">Contact</a></li>
+					</ul>
+				</div>
+				<div class="footer-item footerborder-right col-lg-5 col-md-5 col-sm-8 col-xs-12">
+					<h2>Contact <b>Information</b></h2>
+					<p>
+						<div>Landline: (02) 921-3516</div>
+						<div>E-mail: <a href="#">info@system-rental.com.ph</a></div>
+					</p>
+					<br />
+					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 removespace">
+						<div>John Doe</div>
+						<div>Position</div>
+						<div>johndoe@nomail.com</div>
+						<div>09191234567</div>
+					</div>
+					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 removespace">
+						<div>John Doe</div>
+						<div>Position</div>
+						<div>johndoe@nomail.com</div>
+						<div>09191234567</div>
+					</div>
+				</div>
+				<div class="footer-item col-lg-3 col-md-3 col-sm-4 col-xs-12">
+					<h2>Follow <b>Us</b></h2>
+					<p class="footer-socialmedia">
+						<a href="#" class="fa fa-facebook"></a>
+						<a href="#" class="fa fa-twitter"></a>
+						<a href="#" class="fa fa-youtube"></a>
+						<a href="#" class="fa fa-pinterest"></a>
+					</p>
+					<ul>
+						<li><a href="#">Testimonials</a></li>
+						<li><a href="#">Office Location</a></li>
+						<li><a href="#">Follow</a></li>
+					</ul>
+				</div>
+
+			</div>
+		</div>
+	</div>
+	<!-- end [FOOTER] -->
+
+
+	<!-- begin [JAVASCRIPT] -->
+	<script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
+	<script type="text/javascript" src="js/jquery.cycle.all.js"></script>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/custom.js"></script>
+	<!-- end [JAVASCRIPT] -->
+
+</body>
 </html>
